Fix text position on mobile and add some stroke

--- a/reactapp/src/index.scss
+++ b/reactapp/src/index.scss
@@ -214,12 +214,20 @@ code {
 }
 
 .threep-text {
-    font-size: calc(2em + 4vw);
+    font-size: calc(1.2em + 5vw);
+    -webkit-text-stroke-width: 1px;
+    -webkit-text-stroke-color: black;
 }
 
 @media (min-width: 992px) {
     .threep-text {
         font-size: calc(2em + 5vw);
+    }
+}
+
+@media (max-width: 992px) {
+    .threep-container {
+        padding-top: 6em;
     }
 }
 
@@ -230,6 +238,8 @@ code {
     right: 0;
     margin-top: 15vh;
     font-size: 1em;
+    -webkit-text-stroke-width: 1px;
+    -webkit-text-stroke-color: black;
 }
 
 @media (max-width: 992px) {
